# common-amm-stable-swap

./: .eslintrc.js  .gitignore  Cargo.toml  Makefile  README.md  package-lock.json  package.json
.github/workflows/: pr-checks.yaml
amm/: Makefile
amm/contracts/mock_sazero_rate/: Cargo.toml  lib.rs
amm/contracts/rated_stable_pair/: Cargo.toml  lib.rs  token_rate.rs
amm/contracts/sazero_azero_pair/: Cargo.toml  amp_coef.rs  fees.rs  lib.rs
amm/drink-tests/: Cargo.toml
amm/scripts/: prepare_rust_wrappers.sh
amm/traits/: lib.rs  ownable2step.rs  rate_provider.rs  stable_pool.rs
artifacts/: psp22.json  wrapped_azero.json
helpers/: constants.rs  lib.rs
helpers/stable_swap_math/: amp_coef.rs  fees.rs  mod.rs
scripts/: cp_contract_artifacts.sh  deploy.ts  deploymentPoolsParams.example.json  devAcc.json  utils.ts
typed_contracts/build-extrinsic/: stable_pool_contract.ts
typed_contracts/constructors/: stable_pool_contract.ts
typed_contracts/contract-info/: stable_pool_contract.ts
typed_contracts/contracts/: stable_pool_contract.ts
typed_contracts/data/: stable_pool_contract.json
typed_contracts/event-data/: stable_pool_contract.json
typed_contracts/event-types/: stable_pool_contract.ts
typed_contracts/events/: stable_pool_contract.ts
typed_contracts/mixed-methods/: stable_pool_contract.ts
typed_contracts/query/: stable_pool_contract.ts
typed_contracts/tx-sign-and-send/: stable_pool_contract.ts
typed_contracts/types-arguments/: stable_pool_contract.ts
typed_contracts/types-returns/: stable_pool_contract.ts
(+31 files in other folders)
