[package]
name = "sazero_azero_pair_contract"
version = "0.1.0"
authors = ["Cardinal Cryptography"]
edition = "2021"

[dependencies]
ink = { version = "=4.3.0", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = [
    "derive",
] }
scale-info = { version = "2.9", default-features = false, features = [
    "derive",
], optional = true }

psp22 = { version = "=0.2.2" , default-features = false }
sazero_rate_mock_contract = {path = "../sazero_rate_mock", default-features = false, features = ["ink-as-dependency"]}

traits = { path = "../../traits", default-features = false }
amm-helpers = { path = "../../../helpers", default-features = false }

[lib]
name = "sazero_azero_pair_contract"
path = "lib.rs"
doctest = false

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "psp22/std",
    "traits/std",
    "amm-helpers/std",
    "sazero_rate_mock_contract/std",
]
ink-as-dependency = []
